Fix tooltip positioning on Firefox

--- a/site/css/interactive.css
+++ b/site/css/interactive.css
@@ -95,6 +95,7 @@ button {
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: 100;
 }
 
 #content-container {
@@ -257,7 +258,7 @@ button {
 
 /* Tooltip */
 #tooltip {
-  position: absolute;
+  position: fixed;
   opacity: 0;
   padding: 1em;
   max-width: 220px;
